fix title jump

--- a/themes/cuyagua/static/css/style.css
+++ b/themes/cuyagua/static/css/style.css
@@ -823,15 +823,9 @@ time {
   display: block;
   width: 33.333333333333336%;
 }
-/*.single-text h1 {
-  font-family: "Noe Display";
-  font-weight: bold;
-  font-size: 3.25rem;
+.single-text h1 {
   color: #3333ff;
-  line-height: 1.15em;
-  margin: 1.125rem 0;
-  padding: 0;
-}*/
+}
 .single-description {
   margin: 1.875rem 0;
 }
